Stand-in model for the main character
Temp model

--- a/FirstDrafProj/Assembly-CSharp.csproj
+++ b/FirstDrafProj/Assembly-CSharp.csproj
@@ -46,16 +46,21 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Fur\Support\SynchronizeLights.cs" />
      <Compile Include="Assets\Scripts\PlayerMovement.cs" />
      <Compile Include="Assets\Scripts\SheepMovement.cs" />
      <None Include="Assets\Standard Assets\water well\readme.txt" />
+     <None Include="Assets\Fur\Support\Fur.shader" />
      <None Include="Assets\Single_rock\readme.txt" />
      <None Include="Assets\Standard Assets\Skyboxes\_skybox info.txt" />
+     <None Include="Assets\Fur\Support\FurHelpers.cginc" />
      <None Include="Assets\Standard Assets\Water (Basic)\Sources\Shaders\FX-Water Simple.shader" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
       <Project>{0535E1BC-0F42-20B7-AA45-DB4D809B31B4}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
+    <ProjectReference Include="Assembly-UnityScript-firstpass.unityproj">
+      <Project>{0E590083-E1BB-21F0-4148-C765031BD65C}</Project>      <Name>Assembly-UnityScript-firstpass</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
