--- a/FirstDrafProj/Assembly-CSharp-firstpass-vs.csproj
+++ b/FirstDrafProj/Assembly-CSharp-firstpass-vs.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Standard Assets\Camera Scripts\followCamera.cs" />
      <Compile Include="Assets\Standard Assets\Character Controllers\Sources\Scripts\MouseLook.cs" />
      <Compile Include="Assets\Standard Assets\Water (Basic)\Sources\Scripts\WaterSimple.cs" />
      <None Include="Assets\Mixamo\Shaders\Normal-BumpSpecGloss.shader" />
