--- a/FirstDrafProj/Assembly-CSharp.csproj
+++ b/FirstDrafProj/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\BalloonSheep.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
+     <Compile Include="Assets\Scripts\LoadGame.cs" />
      <Compile Include="Assets\Scripts\PlayerMovement.cs" />
      <Compile Include="Assets\Scripts\PlayerTimer.cs" />
      <Compile Include="Assets\Scripts\SceneManager.cs" />
